# plover_japanese_sokutaipu

./: .gitignore  README.rst  plover_japanese_sokutaipu.py  setup.cfg
plover_japanese_sokutaipu/: system.py
plover_japanese_sokutaipu/dictionaries/: commands.json
