[metadata]
name = plover_japanese_sokutaipu
version = 0.0.1
description = Sokutaipu Japanese realtime system for Plover
long_description = file: README.rst
author = Noriaki Sakamoto
author_email = mrty.ityt.pt@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/na4zagin3/plover_japanese_sokutaipu
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev1
packages =
	plover_japanese_sokutaipu

[options.entry_points]
plover.system =
  Japanese Sokutaipu = plover_japanese_sokutaipu.system
